Install MariaDB and restart the service.

--- a/main.yml
+++ b/main.yml
@@ -50,3 +50,16 @@
         name: httpd
         state: restarted
         enabled: true
+
+    - name: "MariaDB - Installing MariaDB and MySQL-python"
+      yum:
+        name:
+          - mariadb-server
+          - MySQL-python
+        state: present
+
+    - name: "MariaDB - Restarting and Enabling service"
+      service:
+        name: mariadb
+        state: restarted
+        enabled: true
