updating root password-mariadb

--- a/main.yml
+++ b/main.yml
@@ -4,6 +4,10 @@
   become: yes
   vars_files:
     - variables.yml
+  vars_prompt:
+    - name: mariadb_default_pass
+      prompt: "Enter MariaDB root password"
+      private: yes
   tasks:
     - name: "Installing Apache"
       yum:
@@ -63,3 +67,10 @@
         name: mariadb
         state: restarted
         enabled: true
+    - name: "MariaDB - updating root password for mariadb"
+      mysql_user:
+        login_user: root
+        login_password: "{{mariadb_default_pass}}"
+        name: root
+        password: "{{mariadb_root_pass}}"
+        host_all: yes
