--- a/variables.yml
+++ b/variables.yml
@@ -3,3 +3,4 @@ apache_port: "80"
 apache_owner: "apache"
 apache_group: "apache"
 apache_domain: "blog.devopsive.com"
+mariadb_root_pass: "Mysqlroot123"
